--- a/css/servicios.css
+++ b/css/servicios.css
@@ -104,3 +104,10 @@ body {
 .video:hover {
   box-shadow: 0 0 10px rgb(0, 0, 0);
 }
+
+@media (max-width: 768px) {
+  .principal {
+    height: auto;
+    margin-top: 60px;
+  }
+}
